# cli-utils

./: .flake8  .gitignore  Cargo.toml  README.md  install.sh  pyproject.toml
resources/: submit_orca.sh
src/bash/: cli_utils_bash.sh  gotojob.sh
src/python/: animate_vibmode_orca.py  clean_outputs.py  compute_vdw.py  espmap.py  fix_surf.py  get_molecule.py  mdvol.py  poscar_tools.py  slab_generator.py  submit_orca.py  vasp_mdstat.py  vasp_set.py
src/python/lib/: formats.py  utils.py  vibration_analysis.py
src/python/lib/get_molecule/: pubchempy.py  utils.py
src/python/lib/vasp_set/: data.py  input_params.toml  inputs.py  io.py  utils.py
src/rust/bins/check_ef_vasp/: Cargo.toml
src/rust/bins/check_ef_vasp/src/: lib.rs  main.rs
src/rust/bins/kpointsgen/: Cargo.toml
src/rust/bins/kpointsgen/src/: main.rs
src/rust/bins/msdcalc/: Cargo.toml
src/rust/bins/msdcalc/src/: lib.rs  linear_regression.rs  main.rs
src/rust/bins/ndstat/: Cargo.toml
src/rust/bins/ndstat/data/: hpc_node_owners.csv
src/rust/bins/ndstat/src/: main.rs
src/rust/bins/pos2pot/: Cargo.toml
src/rust/bins/pos2pot/src/: main.rs
src/rust/bins/qst/: Cargo.toml
src/rust/bins/qst/src/: lib.rs  main.rs
src/rust/bins/submit_orca/: Cargo.toml
src/rust/bins/submit_orca/data/: submit_orca.sh.body  submit_orca.sh.head.template
src/rust/bins/submit_orca/src/: lib.rs  main.rs
src/rust/bins/submit_vasp/: Cargo.toml
src/rust/bins/submit_vasp/data/: submit_vasp.sh.template
src/rust/bins/submit_vasp/src/: lib.rs  main.rs
src/rust/bins/symmetrize_poscar/: Cargo.toml
src/rust/bins/symmetrize_poscar/src/: main.rs
src/rust/libs/corelib/: Cargo.toml
src/rust/libs/corelib/src/: lib.rs  structure.rs
src/rust/libs/corelib/src/file_formats/: kpoints.rs  mod.rs  poscar.rs
src/rust/libs/corelib/src/io/: xyz.rs
src/rust/libs/corelib/src/parser/: oszicar.rs  poscar.rs
