[package]
name = "check_ef_vasp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.3", features = ["derive"] }
paris = "1.5.13"
rayon = "1.5.3"
regex = "1.6"
corelib = { path = "../../libs/corelib" }