[package]
name = "check_ef_vasp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.3", features = ["derive"] }
paris = "1.5.13"
rayon = "1.5.3"
regex = "1.6"
corelib = { path = "../../libs/corelib" }
sigpipe = "0.1.3"
hdf5 = "0.8.1"
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
ndarray-stats = "0.5.1"
