[package]
name = "submit_vasp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
corelib = { path = "../../libs/corelib" }
tinytemplate = "1.2.1"
home = "0.5.5"
