[package]
name = "symmetrize_poscar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
corelib = { version = "0.1.0", path = "../../libs/corelib" }
spglib = "1.15.1"
